# sdr-mujoco

./: .gitignore  .gitmodules  BUILD_SCRIPTS.md  CHANGELOG.md  EXAMPLES.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  SETUP.md  build_mujoco.sh
mujoco-hello-world/: CMakeLists.txt  README.md  build_hello_world.sh
mujoco-hello-world/model/: simple_box.xml
mujoco-hello-world/src/: hello_world.cpp
